--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-<li><a href="coming-soon">Digital Assignment 0</a></li>
+<li><a href="https://microstudio.io/srongmu/tutorialcreateagame/B9PH8EEN/">Digital Assignment 0</a></li>
 </ol>
 
 </body>
